--- a/src/main/resources/templates/review/review_detail.html
+++ b/src/main/resources/templates/review/review_detail.html
@@ -20,7 +20,8 @@
                          style="height : 23px; width : 23px; border-radius : 17px;">
                     <span th:if="${review.member.nickname}" th:text="${review.member.nickname}"
                           style="font-size : 14px; margin-left : 5px; padding : 3px;"></span>
-                    <span th:text="${#temporals.format(review.dateTime, 'yyyy-MM-dd')}"></span>
+                    <span th:text="${#temporals.format(review.dateTime, 'yyyy-MM-dd')}"
+                          style="font-size : 10px;"></span>
                 </div>
                 <div style="display : flex; flex-direction : column;">
                     <span id="title" th:text=="${info.title}" style="font-size : 16px; font-weight : bold;"></span>
@@ -45,7 +46,19 @@
                 <img th:if="${info == null}" src="/imgs/noimg.jpg">
             </div>
         </div>
-        <span th:text="${review.comment}"></span>
+        <form class="review-Co" >
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+            <input name="reviewId" type="hidden" th:value="${review.id}">
+            <input name="contentsID" type="hidden" th:value="${contentsID}">
+            <input name="category" type="hidden" th:value="${category}">
+            <input name="review" id="New-review" th:value="${review.comment}" readonly>
+        </form>
+
+        <div style="display : flex;" >
+            <button onclick="updateReview()" style="margin-right : 10px;">수정</button>
+            <button onclick="saveReview()">저장</button>
+            <button onclick="deleteReview()" style="margin-left : 10px;">삭제</button>
+        </div>
         <div style="display : flex; margin-top : 28px; color : #868E96; cursor : default;">
             <span>좋아요</span>
             <span class="number" th:text="${#lists.size(review.hearts)}" style="margin-left : 5px;"></span>
@@ -121,13 +134,19 @@
                 </div>
                 <span th:text="${#temporals.format(comment.dateTime, 'yyyy-MM-dd')}"></span>
             </div>
-            <span th:text="${comment.content}"></span>
-            <div sec:authorize="isAuthenticated()" th:if="${memberInfo.id == review.member.id}" style="display: flex; justify-content: flex-end;">
-                <input class="btnWhite" th:value="수정" style="letter-spacing : 0.2em; cursor : pointer;">
-                <button onclick="deleteComment();">
-                    <input id="comment_id" type="hidden" th:value="${comment.id}">
-                    <input class="btnWhite" th:value="삭제" style="margin-left : 5px; letter-spacing : 0.2em; cursor : pointer;">
-                </button>
+            <form class="Comment-Co">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                <input name="reviewId" type="hidden" th:value="${review.id}">
+                <input name="commentId" type="hidden" th:value="${comment.id}">
+                <input name="contentsID" type="hidden" th:value="${contentsID}">
+                <input name="category" type="hidden" th:value="${category}">
+                <input name="comment" class="comment-input" th:value="${comment.content}" readonly>
+            </form>
+            <div sec:authorize="isAuthenticated()" th:if="${memberInfo.id == review.member.id}"
+                 style="display: flex; justify-content: flex-end;">
+                <button onclick="updateComment(this)" style="margin-right : 10px;">수정</button>
+                <button onclick="saveComment2()">저장</button>
+                <button onclick="deleteComment()" style="margin-left : 10px;">삭제</button>
             </div>
         </div>
 
@@ -156,7 +175,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
-    <script  src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script>
         var title = document.getElementById('title').innerText;
@@ -202,6 +221,60 @@
             }
         }
 
+        function updateReview() {
+            document.getElementById("New-review").removeAttribute("readonly");
+            document.getElementById("New-review").focus();
+        }
+
+        function saveReview(){
+            var form = document.querySelector('.review-Co');
+
+            if(confirm("수정하시겠습니까?")){
+                form.method = "POST";
+                form.action = "/review/update";
+                form.submit();
+            }
+        }
+
+        function deleteReview(){
+            var form = document.querySelector('.review-Co');
+
+            if(confirm("삭제하시겠습니까?")){
+                form.method = "POST";
+                form.action = "/review/delete";
+                form.submit();
+            }
+        }
+
+        function updateComment(button) {
+            var form = button.closest('.Comment-Co');
+            var input = form.querySelector('.comment-input');
+
+            input.removeAttribute('readonly');
+            input.focus();
+        }
+
+        function saveComment2() {
+            var form = document.querySelector('.Comment-Co');
+
+            console.log(form);
+
+            if (confirm("수정하시겠습니까?")) {
+                form.method = "POST";
+                form.action = "/comment/update";
+                form.submit();
+            }
+        }
+
+        function deleteComment(){
+            var form = document.querySelector('.comment-Co');
+
+            if(confirm("삭제하시겠습니까?")){
+                form.method = "POST";
+                form.action = "/comment/delete";
+                form.submit();
+            }
+        }
 
         function shareTwitter() {
             var sendText = title + " 리뷰";
